fix arrow z-index

--- a/src/app/components/sidebar/button/button-styles.scss
+++ b/src/app/components/sidebar/button/button-styles.scss
@@ -11,7 +11,7 @@
   align-items: flex-end;
   flex-direction: column;
   padding: $arrow-padding;
-  z-index: $zforeground;
+  z-index: $zforeground * 3;
 
   .arrow {
     @extend %bg-image;
